--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.6.*",
         "vlucas/phpdotenv": "~2.2",
-        "palanik/lumen-cors": "dev-master"
+        "palanik/lumen-cors": "dev-master",
+        "albertcht/invisible-recaptcha": "^1.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
